# LArS

./: .gitignore  CMakeLists.txt  LArS.cc  LArS_bashrc  README.md  bgplotter.C  example.C  plotpmthits.C  readdata.C  runSim.C  sim_input.hh  sim_read.C  todo
include/: LArSActiveVolume.hh  LArSActiveVolume.hh~  LArSAnalysisManager.hh  LArSAnalysisManagerMessenger.hh  LArSConstructCryostat.hh  LArSConstructCryostat.hh~  LArSConstructLab.hh  LArSConstructLab.hh~  LArSConstructTPC.hh  LArSDataCollection.hh~  LArSDetectorConstruction.hh  LArSDetectorConstruction.hh~  LArSDetectorMessenger.hh  LArSEventAction.hh  LArSEventData.hh  LArSLScintHit.hh  LArSLScintSensitiveDetector.hh  LArSLXeHit.hh  LArSLXeHit.hh~  LArSLXeSensitiveDetector.hh  LArSMaterials.hh  LArSOpticalMaterialProperties.hh  LArSOpticalMaterialProperties.hh~  LArSOpticalSurfaces.hh  LArSPMTCell.hh  LArSPMTCell.hh~  LArSParticleSource.hh  LArSParticleSourceMessenger.hh  LArSPhysicsList.hh  LArSPhysicsMessenger.hh  LArSPmtHit.hh  LArSPmtSensitiveDetector.hh  LArSPrimaryGeneratorAction.hh  LArSPrimaryGeneratorMessenger.hh  LArSRunAction.hh  LArSRunActionMessenger.hh  LArSSensitiveDetector.hh  LArSStackingAction.hh  LArSSteppingAction.hh
macros/: PTFE_try_Yanina.mac  alpha_spectrum  gamma_background.mac  gamma_pointsource.mac  gps_try.mac  optPhot_LScint.mac  preinit.mac  preinit.mac~  run_alpha.mac  run_geantino_all.mac  run_geantino_all.mac~  run_geantino_vertical.mac  run_neutron_Pmt.mac  run_photons.mac  run_photons.mac~  src_Kr83m_DP.mac  src_Pointsources_DP.mac  src_Pointsources_DP_automated.mac  src_background.mac  src_optPhot_DP.mac
macros/background/: concrete.mac  concrete_K40.mac  concrete_U238.mac  cu_k40.mac  cu_th228.mac  cu_th232.mac  pmt.mac  pmt_co60.mac  ptfe.mac  ptfe_co60.mac  ptfeu238.mac  ss.mac  ss_Co60.mac  ss_Cs137.mac  ss_K40.mac  ss_U238.mac  ss_th228.mac  ss_th232.mac
simdata/opticalData_LY76p_QE100p_AlSr19p_SS45p_BS0p/: readspectra.C
simrootfiles/sim4_TTX/: events_TTX_20_LY70p_QE100p_TTXr0p_AlSr7p_SS25p_BS5p.root_GEN  events_TTX_20_LY70p_QE100p_TTXr10p_AlSr7p_SS25p_BS5p.root_GEN
spectra/: get_transmittance.C
src/: LArSActiveVolume.cc  LArSActiveVolume.cc~  LArSAnalysisManager.cc  LArSAnalysisManager.cc~  LArSAnalysisManagerMessenger.cc  LArSConstructCryostat.cc  LArSConstructCryostat.cc~  LArSConstructLab.cc  LArSConstructLab.cc~  LArSConstructTPC.cc  LArSConstructTPC.cc~  LArSDataCollection.cc~  LArSDetectorConstruction.cc  LArSDetectorConstruction.cc~  LArSDetectorMessenger.cc  LArSEventAction.cc  LArSEventData.cc  LArSLScintHit.cc  LArSLScintSensitiveDetector.cc  LArSLXeHit.cc  LArSLXeSensitiveDetector.cc~  LArSMaterials.cc  LArSMaterials.cc~  LArSOpticalMaterialProperties.cc  LArSOpticalMaterialProperties.cc~  LArSOpticalSurfaces.cc  LArSPMTCell.cc  LArSPMTCell.cc~  LArSParticleSource.cc  LArSParticleSource.cc~  LArSParticleSourceMessenger.cc  LArSPhysicsList.cc  LArSPhysicsMessenger.cc  LArSPmtHit.cc  LArSPmtSensitiveDetector.cc  LArSPmtSensitiveDetector.cc~  LArSPrimaryGeneratorAction.cc  LArSPrimaryGeneratorMessenger.cc  LArSRunAction.cc  LArSRunActionMessenger.cc  (+5 more)
